--- a/app/components/navbar/navbar.module.css
+++ b/app/components/navbar/navbar.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
     background-color: rgb(186, 223, 223);
     height: auto;
     padding-left: 1rem;
@@ -10,15 +11,23 @@
 }
 .logoWrapper{
     display: flex;
-    /* justify-content: center;
-    align-items: center; */
+    justify-content: center;
+    align-items: center;
 }
 .navLinksWrapper {
+    /* border: 1 solid ; */
     display: flex;
     flex: 1;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 2rem;
     font-size: 1.2rem;
+
+    ul>li{
+        padding: 1vw;
+        display: inline-block;
+        text-decoration: none;
+    }
 }
 
 .siteLogo {
