--- a/app/intro/intro.module.css
+++ b/app/intro/intro.module.css
@@ -3,3 +3,25 @@
     justify-content: center;
     align-items: center;
 }
+
+.infoContents{
+    padding-top: 10px;
+    padding-left: 10px;
+    max-width: 80vw;
+    h1{
+        font-size: x-large;
+        margin-bottom: 10px;
+    }
+    h2{
+        margin-top: 25px;
+        font-size: medium;
+    }
+    p,li{
+        font-size: 0.9rem;
+        margin-bottom: 10px;
+    }
+    ul{
+        padding-left: 25px;
+        margin-bottom: 10px;
+    }
+}
