--- a/app/stats/numbers/numbers.module.css
+++ b/app/stats/numbers/numbers.module.css
@@ -8,7 +8,15 @@
         font-size: 1.3rem;
         padding-bottom: 1rem;
     }
+
     h2 {
         font-size: 1rem;
+    }
+
+    .chart {
+        canvas {
+            width: 400px;
+            height: 50%;
+        }
     }
 }
