--- a/app/components/footer/footer.module.css
+++ b/app/components/footer/footer.module.css
@@ -3,10 +3,10 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 50px;
+    max-height: 70px;
     width:100%;
     font-size: small;
-    margin-top: 20px;
+    margin-top: 40px;
     width: 100vw;
     display: flex;
     height: 100px;
