--- a/app/stats/numbers/numbers.module.css
+++ b/app/stats/numbers/numbers.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    padding-left: 5px;
 
     h1 {
         font-size: 1.3rem;
