--- a/app/stats/grouping/grouping.module.css
+++ b/app/stats/grouping/grouping.module.css
@@ -16,4 +16,35 @@
     li{
         font-size: 0.9rem;
     }
+    .tablesAverage {
+
+        border: 1px solid black;
+        overflow-x: auto;
+        border: 1px solid;
+        border-collapse: collapse;
+        table-layout: auto;
+    
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    
+        th,
+        td {
+            font-family: 'Courier New', Courier, monospace;
+            font-size: .9rem;
+            padding: 5px;
+            text-align: left;
+            white-space: nowrap;
+        }
+    
+        th {
+            background-color: rgb(53, 50, 50);
+            color: rgb(227, 234, 235);
+        }
+    }
+    
+    .tablesAverage {
+        min-width: 20%;
+        max-width: 30%;
+    }
 }
