--- a/app/create/create.module.css
+++ b/app/create/create.module.css
@@ -38,9 +38,9 @@
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 12px;
-    background-color: #f9f9f9;
+    background-color: #dbe8e9;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
 }
 
 .dropdownWrapper {
@@ -84,11 +84,11 @@
 
 .submitButton {
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 10px 15px;
     font-size: 16px;
     font-weight: 500;
     color: white;
-    background-color: #0070f3;
+    background-color: #2063af;
     border: none;
     border-radius: 6px;
     cursor: pointer;
