--- a/app/create/create.module.css
+++ b/app/create/create.module.css
@@ -38,7 +38,7 @@
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 12px;
-    background-color: #dbe8e9;
+    background-color: var(--container-bg);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     /* font-family: 'Courier New', Courier, monospace; */
 }
@@ -61,8 +61,8 @@
     -webkit-appearance: none;
     -moz-appearance: none;
 
-    margin-left: 10px;
-    padding: 6px 30px 6px 15px;
+    margin-left: 5px;
+    padding: 6px 30px 6px 5px;
     font-size: 0.9rem;
     border: 1px solid #ccc;
     border-radius: 6px;
@@ -88,7 +88,7 @@
     font-size: 16px;
     font-weight: 500;
     color: white;
-    background-color: #2063af;
+    background-color: var(--btn-create-bg);
     border: none;
     border-radius: 6px;
     cursor: pointer;
@@ -96,18 +96,19 @@
   }
   
   .submitButton:hover {
-    background-color: #0059c1;
+    background-color: var(--btn-create-bg-hover);
+    border: none;
   }
   
   .submitButton:active {
-    background-color: #0044a3;
+    background-color: var(--btn-create-bg-hover);
   }
 
   .filtersSection {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: 30px;
+    margin-top: 20px;
   }
   
   .customInput {
