--- a/app/stats/numbers/numbers.module.css
+++ b/app/stats/numbers/numbers.module.css
@@ -35,7 +35,7 @@
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 12px;
-    background-color: #f9f9f9;
+    background-color: var(--container-bg);
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     font-family: 'Courier New', Courier, monospace;
 }
