--- a/app/components/navmenu/NavMenu.module.css
+++ b/app/components/navmenu/NavMenu.module.css
@@ -118,6 +118,11 @@
         max-height: 500px;
         opacity: 1;
         padding: 0.5rem 0;
+        /* border: 3px solid salmon; */
+        /* .burger {
+            display: none;
+            z-index: -10;
+        } */
     }
 
     .navLinks li {
@@ -126,6 +131,9 @@
         width: 100%;
         white-space: nowrap;
     }
+    /* .navLinks li.active {
+        display: none;
+    } */
 
     .hasSubmenu {
         position: static;
