--- a/app/create/create.module.css
+++ b/app/create/create.module.css
@@ -33,6 +33,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    min-width: 260px;
     max-width: 30vw;
     margin: 0 auto;
     padding: 20px;
